--- a/index.html
+++ b/index.html
@@ -61,28 +61,28 @@
       <!-- gov logos -->
 
       <div class="row">
-        <div class="col-md-3">
+        <div class="col-md-2">
           <a href="http://www.hillsboroughcounty.org/en/residents/property-owners-and-renters/trash-and-recycling/what-can-i-recycle"
             target="_blank">
             <img alt="Hillsborough County" src="/assets/images/partner-logos/hillsCo.png" />
           </a>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-2">
           <a href="https://www.tampagov.net/solid-waste/programs/recycling-and-waste-reduction" target="_blank">
             <img alt="City of Tampa" src="/assets/images/partner-logos/COT%20logo%20blue.png" />
           </a>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-2">
           <a href="https://pinellas.gov/recycle" target="_blank">
             <img alt="Pinellas County" src="/assets/images/partner-logos/SW_3pmsc.png" />
           </a>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-2">
           <a href="http://www.stpete.org/recycling" target="_blank">
             <img alt="St. Petersburg" src="/assets/images/partner-logos/StPetersburg%20Logo%20Full%20Color.png" />
           </a>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-2">
           <a href="https://www.mymanatee.org/departments/utilities/residential_garbage_collection/residential_recycling"
             target="_blank">
             <img alt="Manatee County" src="/assets/images/partner-logos/Manatee County logo.png" />
@@ -193,7 +193,7 @@
                     Tampa</a></li>
                 <li><a href="https://www.templeterrace.gov/187/Recycling" target="_blank">City of Temple Terrace</a>
                 </li>
-                <li><a href="https://www.pinellas.gov/recycle" target="_blank">/Pinellas County</a></li>
+                <li><a href="https://www.pinellas.gov/recycle" target="_blank">Pinellas County</a></li>
                 <li><a href="https://www.stpete.org/recycling" target="_blank">City of St. Petersburg</a></li>
                 <li><a href="https://www.pascocountyfl.net/services/utilities/garbage_and_recycling/recycling.php"
                     target="_blank">Pasco
@@ -305,84 +305,83 @@
         </div>
 
         <div class="tab-pane fade" id="tab4">
-          <div class="row">
-            <div class="col-md-4">
-              <img class="img-responsive" src="/assets/images/brand/recycleLogo.png" />
+          <div class="column">
+            <div class="col-md-12">
+              <img class="img-responsive center-block" src="/assets/images/brand/recycleLogo.png" />
             </div>
 
-            <div class="col-md-4 col-md-offset-2">
-              <h3>Why Should I Recycle?</h3>
+            <h3>Why Should I Recycle?</h3>
 
-              <p>
-                As Tampa Bay continues to grow, so does the amount of waste generated. Due to the limited landfill
-                disposal capacity and stress on the waste-to-energy facilities, reducing waste and recycling is more
-                important than ever. By recycling, you help Tampa Bay communities save resources and energy, support
-                local economies, and protect the environment.
-              </p>
+            <p>
+              As Tampa Bay continues to grow, so does the amount of waste generated. Due to the limited landfill
+              disposal capacity and stress on the waste-to-energy facilities, reducing waste and recycling is more
+              important than ever. By recycling, you help Tampa Bay communities save resources and energy, support
+              local economies, and protect the environment.
+            </p>
 
-              <h3>Recycling Saves Natural Resources</h3>
+            <h3>Recycling Saves Natural Resources</h3>
 
-              <ul>
-                <li>Recycling is the process of transforming materials that would otherwise be thrown away as trash
-                  and turning them into new products, avoiding resource extraction from the environment. Glass bottles
-                  can be recycled into fiberglass and new containers; aluminum cans can be recycled into new beverage
-                  cans; and paper can be recycled into over 5,000 products, including writing paper, paper towels,
-                  coffee filters, hospital gowns, egg cartons, and more. </li>
+            <ul>
+              <li>Recycling is the process of transforming materials that would otherwise be thrown away as trash
+                and turning them into new products, avoiding resource extraction from the environment. Glass bottles
+                can be recycled into fiberglass and new containers; aluminum cans can be recycled into new beverage
+                cans; and paper can be recycled into over 5,000 products, including writing paper, paper towels,
+                coffee filters, hospital gowns, egg cartons, and more. </li>
 
-                <li>Aluminum cans are 100% recyclable and there is no limit to how many times they can be recycled.
-                  Around 75% of the aluminum made is still in circulation.</li>
+              <li>Aluminum cans are 100% recyclable and there is no limit to how many times they can be recycled.
+                Around 75% of the aluminum made is still in circulation.</li>
 
-                <li><a href="https://napcor.com/recycling/pet-end-products/" target="_blank">Recycled water bottles made
-                    from PET plastic</a> can be used to make fiber for clothing and carpets, food and non-food bottles,
-                  take-out containers, and fill for furnishings. </li>
-              </ul>
+              <li><a href="https://napcor.com/recycling/pet-end-products/" target="_blank">Recycled water bottles made
+                  from PET plastic</a> can be used to make fiber for clothing and carpets, food and non-food bottles,
+                take-out containers, and fill for furnishings. </li>
+            </ul>
 
-              <h3>Recycling Saves Energy</h3>
+            <h3>Recycling Saves Energy</h3>
 
-              <ul>
-                <li>Recycling high-density polyethylene or HDPE bottles and jugs (examples of this plastic are milk,
-                  water, and laundry detergent bottles and jugs) <a
-                    href="https://plasticsrecycling.org/images/library/2018-APR-LCI-report.pdf" target="_blank">reduces
-                    total energy
-                    consumption by 88%</a> compared to
-                  making the items from virgin materials. </li>
+            <ul>
+              <li>Recycling high-density polyethylene or HDPE bottles and jugs (examples of this plastic are milk,
+                water, and laundry detergent bottles and jugs) <a
+                  href="https://plasticsrecycling.org/images/library/2018-APR-LCI-report.pdf" target="_blank">reduces
+                  total energy
+                  consumption by 88%</a> compared to
+                making the items from virgin materials. </li>
 
-                <li><a href="https://www.aluminum.org/Recycling" target="_blank">Recycling aluminum cans</a> saves 95%
-                  of the energy that is needed to make aluminum from its virgin source. </li>
-              </ul>
+              <li><a href="https://www.aluminum.org/Recycling" target="_blank">Recycling aluminum cans</a> saves 95%
+                of the energy that is needed to make aluminum from its virgin source. </li>
+            </ul>
 
-              <h3>Recycling is Supported by the State of Florida</h3>
+            <h3>Recycling is Supported by the State of Florida</h3>
 
-              <ul>
-                <li>In 2008, the Florida Legislature set a recycling goal of 75% by 2020 for Florida counties. The
-                  state did not meet this goal. The Florida Department of Environmental Protection will be developing a
-                  new state recycling goal and measurement framework. Florida counties are responsible for reporting
-                  their recycling rate annually, including the tons recycled by residents and businesses. </li>
-              </ul>
+            <ul>
+              <li>In 2008, the Florida Legislature set a recycling goal of 75% by 2020 for Florida counties. The
+                state did not meet this goal. The Florida Department of Environmental Protection will be developing a
+                new state recycling goal and measurement framework. Florida counties are responsible for reporting
+                their recycling rate annually, including the tons recycled by residents and businesses. </li>
+            </ul>
 
-              <h3>Recycling Reduces Greenhouse Gas Emissions</h3>
+            <h3>Recycling Reduces Greenhouse Gas Emissions</h3>
 
-              <ul>
-                <li>Gases that trap heat in the atmosphere are called greenhouse gases (GHGs). The GHGs created from
-                  human activities have been the most significant driver of observed <a
-                    href="https://www.epa.gov/climate-indicators/greenhouse-gases" target="_blank">climate change</a>
-                  since the mid-1900s,
-                  according to the EPA. Three <a href="https://www.epa.gov/ghgemissions/overview-greenhouse-gases"
-                    target="_blank">notable GHGs</a> include carbon dioxide (CO2), methane (CH4), and nitrous
-                  oxide (N2O).</li>
+            <ul>
+              <li>Gases that trap heat in the atmosphere are called greenhouse gases (GHGs). The GHGs created from
+                human activities have been the most significant driver of observed <a
+                  href="https://www.epa.gov/climate-indicators/greenhouse-gases" target="_blank">climate change</a>
+                since the mid-1900s,
+                according to the EPA. Three <a href="https://www.epa.gov/ghgemissions/overview-greenhouse-gases"
+                  target="_blank">notable GHGs</a> include carbon dioxide (CO2), methane (CH4), and nitrous
+                oxide (N2O).</li>
 
-                <li>The best way to reduce GHGs is to reduce what you use, reducing the amount of waste generated. For
-                  example, opting for less-packaged goods, using durable and reusable products over single-use products,
-                  and shopping secondhand are great ways to reduce the GHGs emitted during the manufacturing,
-                  transportation, and disposal of new materials.</li>
+              <li>The best way to reduce GHGs is to reduce what you use, reducing the amount of waste generated. For
+                example, opting for less-packaged goods, using durable and reusable products over single-use products,
+                and shopping secondhand are great ways to reduce the GHGs emitted during the manufacturing,
+                transportation, and disposal of new materials.</li>
 
-                <li>Imagine purchasing a plastic water bottle from the grocery store today. How was that water bottle
-                  created? How did it get to you? What will you do with it after it’s no longer of use to you? Each step
-                  of the process – from the extraction of oil to create the plastic, the transportation of those
-                  materials by gasoline-powered planes, ships, and vehicles, the energy that the manufacturing process
-                  entails, and its end-of-life fate – will determine how many GHGs are emitted into the atmosphere.</li>
-              </ul>
-            </div>
+              <li>Imagine purchasing a plastic water bottle from the grocery store today. How was that water bottle
+                created? How did it get to you? What will you do with it after it’s no longer of use to you? Each step
+                of the process – from the extraction of oil to create the plastic, the transportation of those
+                materials by gasoline-powered planes, ships, and vehicles, the energy that the manufacturing process
+                entails, and its end-of-life fate – will determine how many GHGs are emitted into the atmosphere.</li>
+            </ul>
+
             <!-- /.col -->
 
             <!-- /.col -->
@@ -392,27 +391,27 @@
 
         <div class="tab-pane fade" id="tab5">
           <div class="row">
-            <div class="col-md-4 col-md-offset-2">
+            <div class="col-md-5 col-md-offset-1 col-sm-6">
+              <img class="img-responsive" src="/assets/images/recycle-art.png" />
+            </div>
+            <div class="col-md-5 col-sm-6">
               <h3>Reduce Your Use Tampa Bay</h3>
-
-              <div class="col-md-4">
-                <img class="img-responsive" src="/assets/images/recycle-art.png" />
-              </div>
-
               <p>
                 Not everything can be recycled, so do more with less! Switch to reusable items and reduce your use of
                 single-use plastics. Reducing waste saves money and helps the environment. Be part of the solution to
-                plastic pollution, learn about and support local businesses who are cutting waste, and join Reduce Your
+                plastic pollution, learn about and support local businesses who are cutting waste, and join Reduce
+                Your
                 Use Tampa Bay!
               </p>
             </div>
-            <!-- /.col -->
-
-            <!-- /.col -->
           </div>
-          <!-- /.row -->
+          <!-- /.col -->
+
+          <!-- /.col -->
         </div>
+        <!-- /.row -->
       </div>
+    </div>
     </div>
     <!-- /.container -->
   </section>
