move partner images

--- a/index.html
+++ b/index.html
@@ -61,40 +61,40 @@
       <!-- gov logos -->
 
       <div class="row">
-        <div class="col-md-2">
+        <div class="col-md-4">
           <a href="http://www.hillsboroughcounty.org/en/residents/property-owners-and-renters/trash-and-recycling/what-can-i-recycle"
             target="_blank">
             <img alt="Hillsborough County" src="/assets/images/partner-logos/hillsCo.png" />
           </a>
         </div>
-        <div class="col-md-2">
+        <div class="col-md-4">
           <a href="https://www.tampagov.net/solid-waste/programs/recycling-and-waste-reduction" target="_blank">
             <img alt="City of Tampa" src="/assets/images/partner-logos/COT%20logo%20blue.png" />
           </a>
         </div>
-        <div class="col-md-2">
+        <div class="col-md-4">
           <a href="https://pinellas.gov/recycle" target="_blank">
             <img alt="Pinellas County" src="/assets/images/partner-logos/SW_3pmsc.png" />
-          </a>
-        </div>
-        <div class="col-md-2">
-          <a href="http://www.stpete.org/recycling" target="_blank">
-            <img alt="St. Petersburg" src="/assets/images/partner-logos/StPetersburg%20Logo%20Full%20Color.png" />
-          </a>
-        </div>
-        <div class="col-md-2">
-          <a href="https://www.mymanatee.org/departments/utilities/residential_garbage_collection/residential_recycling"
-            target="_blank">
-            <img alt="Manatee County" src="/assets/images/partner-logos/Manatee County logo.png" />
           </a>
         </div>
       </div>
 
       <!-- second tier partners -->
       <div class="row" style="margin: 3rem 0">
-        <div class="col-md-2 col-md-offset-5">
+        <div class="col-md-4">
           <a href="https://www.templeterrace.gov/187/Recycling" target="_blank">
-            <img alt="Temple Terrace" src="/assets/images/partner-logos/TempleTerrace.png" class="img-responsive" />
+            <img alt="Temple Terrace" src="/assets/images/partner-logos/TempleTerrace.png" />
+          </a>
+        </div>
+        <div class="col-md-4">
+          <a href="http://www.stpete.org/recycling" target="_blank">
+            <img alt="St. Petersburg" src="/assets/images/partner-logos/StPetersburg%20Logo%20Full%20Color.png" />
+          </a>
+        </div>
+        <div class="col-md-4">
+          <a href="https://www.mymanatee.org/departments/utilities/residential_garbage_collection/residential_recycling"
+            target="_blank">
+            <img alt="Manatee County" src="/assets/images/partner-logos/Manatee County logo.png" />
           </a>
         </div>
       </div>
