--- a/index.html
+++ b/index.html
@@ -21,8 +21,12 @@
   <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,400,300,600,700"
     rel="stylesheet" />
   <link href="http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" />
-  <link href="/assets/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
-  <link href="/assets/css/font-awesome.min.css" rel="stylesheet" />
+
+  <!-- <link href="/assets/bootstrap/css/bootstrap.min.css" rel="stylesheet" /> -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap.min.css"
+    integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
+
+  <!-- <link href="/assets/css/font-awesome.min.css" rel="stylesheet" /> -->
   <link href="/assets/css/style-library-1.css" rel="stylesheet" />
   <link href="/assets/css/blocks.css" rel="stylesheet" />
   <link href="/assets/css/custom.css" rel="stylesheet" />
@@ -41,7 +45,7 @@
         <div class="col-md-8 col-md-offset-2 text-center">
           <div class="editContent">
             <h1>
-              <img src="/assets/images/brand/recycleLogo.png" class="img-responsive center-block" />
+              <img src="/assets/images/brand/recycleLogo.png" alt="Recycle logo" class="img-responsive center-block" />
               Tampa Bay Recycles
             </h1>
           </div>
@@ -105,18 +109,13 @@
           <p>Click on the logo to learn more about your local recycling program</p>
 
           <p>
-            Local governments across Tampa Bay have teamed up to improve
-            recycling efforts in the region. Recycling rules vary by
+            Local governments across Tampa Bay have teamed up to improve recycling efforts in the region in this
+            award-winning campaign. Recycling rules vary by
             jurisdiction based on collection and processing capabilities, so
             please check with your local recycling service provider to ensure
             you are recycling correctly and helping our region avoid the
             common challenge of contamination - attempting to recycle soiled
             items or materials our programs don't accept.
-          </p>
-
-          <p>
-            Join the social media conversation, share recycling tips, and ask
-            questions by using <strong>#TampaBayRecycles</strong>
           </p>
         </div>
       </div>
@@ -169,6 +168,7 @@
             <div class="col-md-5 col-md-offset-1 col-sm-6">
               <div class="embed-responsive embed-responsive-16by9">
                 <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/38lyLUtUSVk" frameborder="0"
+                  title="The Recycle Life Cycle video"
                   allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                   allowfullscreen></iframe>
               </div>
@@ -212,13 +212,16 @@
         <div class="tab-pane fade" id="tab2">
           <div class="row">
             <div class="col-md-5 col-md-offset-1 col-sm-6">
-              <img class="img-responsive" src="/assets/images/Cutting_Bags_From_Screens.JPG" />
+              <a href="/assets/images/Cutting_Bags_From_Screens.JPG" target="_blank"><img class="img-responsive"
+                  src="/assets/images/Cutting_Bags_From_Screens.JPG" alt="Cutting bags from screens" /></a>
 
-              <img class="img-responsive" src="/assets/images/recycle-art.png" />
+              <a href="/assets/images/recycle-art.png" target="_blank"><img class="img-responsive"
+                  src="/assets/images/recycle-art.png" alt="Plastic bag recycle art" /></a>
 
               <div class="embed-responsive embed-responsive-16by9 thumbnail">
                 <!--  -->
-                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/RCn5xrAFh2Q"></iframe>
+                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/RCn5xrAFh2Q"
+                  title="Trash the Bags Tampa Bay! video"></iframe>
               </div>
             </div>
             <!-- /.col -->
@@ -260,9 +263,13 @@
         <div class="tab-pane fade" id="tab3">
           <div class="row">
             <div class="col-md-5 col-md-offset-1 col-sm-6">
-              <img class="img-responsive" src="/assets/images/SW_HC Battery_Blowup2024_FB2.jpg" />
+              <a href="/assets/images/BLANK_SW_HC Battery_Blowup2024Eng-Span-FINAL_03_1.png" target="_blank"><img
+                  class="img-responsive" src="/assets/images/BLANK_SW_HC Battery_Blowup2024Eng-Span-FINAL_03_1.png"
+                  alt="Battery recycling safety graphic" /></a>
 
-              <img class="img-responsive" src="/assets/images/SW_HC Battery_Blowup2024_FB1.jpg" />
+              <a href="/assets/images/BLANK_SW_HC Battery_Blowup2024Eng-Span-FINAL_01_1.png" target="_blank"><img
+                  class="img-responsive" src="/assets/images/BLANK_SW_HC Battery_Blowup2024Eng-Span-FINAL_01_1.png"
+                  alt="Battery recycling safety graphic" /></a>
             </div>
             <!-- /.col -->
             <div class="col-md-5 col-sm-6">
@@ -307,7 +314,7 @@
         <div class="tab-pane fade" id="tab4">
           <div class="column">
             <div class="col-md-12">
-              <img class="img-responsive center-block" src="/assets/images/brand/recycleLogo.png" />
+              <img class="img-responsive center-block" src="/assets/images/brand/recycleLogo.png" alt="Recycle logo" />
             </div>
 
             <h3>Why Should I Recycle?</h3>
@@ -392,16 +399,17 @@
         <div class="tab-pane fade" id="tab5">
           <div class="row">
             <div class="col-md-5 col-md-offset-1 col-sm-6">
-              <img class="img-responsive" src="/assets/images/recycle-art.png" />
+              <a href="/assets/images/recycle-art.png" target="_blank"><img class="img-responsive"
+                  src="/assets/images/recycle-art.png" alt="Plastic bag recycle art" /></a>
             </div>
             <div class="col-md-5 col-sm-6">
               <h3>Reduce Your Use Tampa Bay</h3>
               <p>
                 Not everything can be recycled, so do more with less! Switch to reusable items and reduce your use of
                 single-use plastics. Reducing waste saves money and helps the environment. Be part of the solution to
-                plastic pollution, learn about and support local businesses who are cutting waste, and join Reduce
-                Your
-                Use Tampa Bay!
+                plastic pollution, learn about and support local businesses who are cutting waste, and join <a
+                  href="https://www.reduceyourusetampabay.org/" target="_blank">Reduce
+                  Your Use Tampa Bay</a>!
               </p>
             </div>
           </div>
@@ -419,16 +427,25 @@
   <!-- footer -->
   <footer class="content-block-nopad bg-deepocean footer-wrap-1-2">
     <div class="container footer-1-2">
-      <img class="img-responsive center-block" src="/assets/images/brand/recycleLogo.png" />
-      <p class="text-center">&copy; Tampa Bay Recycles, 2017</p>
+      <img class="img-responsive center-block" src="/assets/images/brand/recycleLogo.png" alt="Recycle logo" />
+      <p class="text-center">&copy; Tampa Bay Recycles,
+        <script>document.write(/\d{4}/.exec(Date())[0])</script>
+      </p>
       <p class="text-center">
         <a href="/es" class="text-danger">Español</a>
       </p>
     </div>
   </footer>
 
-  <script src="/assets/js/jquery-1.11.1.min.js" type="text/javascript"></script>
-  <script src="/assets/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
+  <!-- <script src="/assets/js/jquery-1.11.1.min.js" type="text/javascript"></script> -->
+  <script src="https://code.jquery.com/jquery-3.7.1.slim.min.js"
+    integrity="sha256-kmHvs0B+OpCW5GVHUNjv9rOmY0IvSIRcf7zGUDTDQM8=" crossorigin="anonymous"></script>
+
+  <!-- <script src="/assets/bootstrap/js/bootstrap.min.js" type="text/javascript"></script> -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/js/bootstrap.min.js"
+    integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd"
+    crossorigin="anonymous"></script>
+
   <script src="/assets/js/hero-carousel.js" type="text/javascript"></script>
 </body>
 
