add Pasco County partner

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
               Tampa Bay Recycles
             </h1>
           </div>
+
           <div class="editContent">
             <p class="lead">
               Together We Have Made Tampa Bay one of the Top Recycling Regions
@@ -63,23 +64,30 @@
   <section class="content-1-7 content-block" id="content-1-7">
     <div class="container">
       <!-- gov logos -->
-
       <div class="row">
-        <div class="col-md-4">
-          <a href="http://www.hillsboroughcounty.org/en/residents/property-owners-and-renters/trash-and-recycling/what-can-i-recycle"
+        <div class="col-md-3">
+          <a href="https://hcfl.gov/residents/property-owners-and-renters/trash-and-recycling/what-can-i-recycle"
             target="_blank">
             <img alt="Hillsborough County" src="/assets/images/partner-logos/hillsCo.png" />
           </a>
         </div>
-        <div class="col-md-4">
+
+        <div class="col-md-3">
           <a href="https://www.tampagov.net/solid-waste/programs/recycling-and-waste-reduction" target="_blank">
             <img alt="City of Tampa" src="/assets/images/partner-logos/COT%20logo%20blue.png" />
           </a>
         </div>
-        <div class="col-md-4">
+
+        <div class="col-md-3">
           <a href="https://pinellas.gov/recycle" target="_blank">
             <img alt="Pinellas County" src="/assets/images/partner-logos/SW_3pmsc.png" />
           </a>
+        </div>
+
+        <div class="col-md-3">
+          <a href="https://www.pascocountyfl.net/services/utilities/garbage_and_recycling/recycling.php"
+            target="_blank">
+            <img alt="Pasco County" src="/assets/images/partner-logos/pascocounty_cmyk_tag_1.png" />
         </div>
       </div>
 
@@ -90,11 +98,13 @@
             <img alt="Temple Terrace" src="/assets/images/partner-logos/TempleTerrace.png" />
           </a>
         </div>
+
         <div class="col-md-4">
-          <a href="http://www.stpete.org/recycling" target="_blank">
+          <a href="https://www.stpete.org/recycling" target="_blank">
             <img alt="St. Petersburg" src="/assets/images/partner-logos/StPetersburg%20Logo%20Full%20Color.png" />
           </a>
         </div>
+
         <div class="col-md-4">
           <a href="https://www.mymanatee.org/departments/utilities/residential_garbage_collection/residential_recycling"
             target="_blank">
@@ -103,7 +113,6 @@
         </div>
       </div>
 
-      <!--  -->
       <div class="row center-block" id="lead-text">
         <div class="col-md-10 col-md-offset-1 text-left">
           <p>Click on the logo to learn more about your local recycling program</p>
@@ -119,6 +128,7 @@
           </p>
         </div>
       </div>
+
       <div class="row" id="pull-quote">
         <div class="col-md-8 col-md-offset-2">
           <blockquote id="lead">
@@ -130,7 +140,6 @@
         </div>
       </div>
     </div>
-    <!-- /.container -->
   </section>
 
   <!-- content -->
@@ -174,7 +183,7 @@
               </div>
               <!-- <img src="/assets/images/tanglers.jpg" alt="Trash the Tanglers" class="img-responsive center-block"> -->
             </div>
-            <!-- /.col -->
+
             <div class="col-md-5 col-sm-6">
               <p>
                 Recycling program guidelines can be slightly different depending on where you work, live, and play in
@@ -184,29 +193,42 @@
               </p>
 
               <ul>
-                <li><a
-                    href="https://hcfl.gov/residents/property-owners-and-renters/trash-and-recycling/what-can-i-recycle"
+                <li>
+                  <a href="https://hcfl.gov/residents/property-owners-and-renters/trash-and-recycling/what-can-i-recycle"
                     target="_blank">Hillsborough
-                    County</a></li>
+                    County
+                  </a>
+                </li>
+
                 <li><a href="https://www.tampagov.net/solid-waste/programs/recycling-and-waste-reduction"
                     target="_blank">City of
-                    Tampa</a></li>
-                <li><a href="https://www.templeterrace.gov/187/Recycling" target="_blank">City of Temple Terrace</a>
+                    Tampa
+                  </a>
                 </li>
+
+                <li>
+                  <a href="https://www.templeterrace.gov/187/Recycling" target="_blank">City of Temple Terrace</a>
+                </li>
+
                 <li><a href="https://www.pinellas.gov/recycle" target="_blank">Pinellas County</a></li>
+
                 <li><a href="https://www.stpete.org/recycling" target="_blank">City of St. Petersburg</a></li>
+
                 <li><a href="https://www.pascocountyfl.net/services/utilities/garbage_and_recycling/recycling.php"
                     target="_blank">Pasco
-                    County</a></li>
+                    County
+                  </a>
+                </li>
+
                 <li><a
                     href="https://www.mymanatee.org/departments/utilities/residential_garbage_collection/residential_recycling"
                     target="_blank">Manatee
-                    County</a></li>
+                    County
+                  </a>
+                </li>
               </ul>
             </div>
-            <!-- /.col -->
           </div>
-          <!-- /.row -->
         </div>
 
         <div class="tab-pane fade" id="tab2">
@@ -219,12 +241,11 @@
                   src="/assets/images/recycle-art.png" alt="Plastic bag recycle art" /></a>
 
               <div class="embed-responsive embed-responsive-16by9 thumbnail">
-                <!--  -->
                 <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/RCn5xrAFh2Q"
                   title="Trash the Bags Tampa Bay! video"></iframe>
               </div>
             </div>
-            <!-- /.col -->
+
             <div class="col-md-5 col-sm-6">
               <h3>Plastic Bags & Bagged Items</h3>
 
@@ -255,9 +276,7 @@
                 it out!<br />
               </p>
             </div>
-            <!-- /.col -->
           </div>
-          <!-- /.row -->
         </div>
 
         <div class="tab-pane fade" id="tab3">
@@ -271,7 +290,7 @@
                   class="img-responsive" src="/assets/images/BLANK_SW_HC Battery_Blowup2024Eng-Span-FINAL_01_1.png"
                   alt="Battery recycling safety graphic" /></a>
             </div>
-            <!-- /.col -->
+
             <div class="col-md-5 col-sm-6">
               <h3>Batteries</h3>
 
@@ -292,23 +311,24 @@
                     href="https://hcfl.gov/residents/property-owners-and-renters/trash-and-recycling/discarding-batteries"
                     target="_blank">Hillsborough
                     County</a></li>
+
                 <li><a
                     href="https://pinellas.gov/story/solid-waste-encourages-residents-to-properly-dispose-of-rechargeable-batteries-to-keep-employees-safe/"
                     target="_blank">Pinellas
                     County</a></li>
+
                 <li><a
                     href="https://www.mymanatee.org/departments/utilities/residential_garbage_collection/electronic_scrap___household_hazardous_waste"
                     target="_blank">Manatee
                     County</a></li>
+
                 <li><a
                     href="https://www.pascocountyfl.net/services/utilities/garbage_and_recycling/household_hazardous_waste.php"
                     target="_blank">Pasco
                     County</a></li>
               </ul>
             </div>
-            <!-- /.col -->
           </div>
-          <!-- /.row -->
         </div>
 
         <div class="tab-pane fade" id="tab4">
@@ -388,12 +408,7 @@
                 materials by gasoline-powered planes, ships, and vehicles, the energy that the manufacturing process
                 entails, and its end-of-life fate – will determine how many GHGs are emitted into the atmosphere.</li>
             </ul>
-
-            <!-- /.col -->
-
-            <!-- /.col -->
           </div>
-          <!-- /.row -->
         </div>
 
         <div class="tab-pane fade" id="tab5">
@@ -402,8 +417,10 @@
               <a href="/assets/images/recycle-art.png" target="_blank"><img class="img-responsive"
                   src="/assets/images/recycle-art.png" alt="Plastic bag recycle art" /></a>
             </div>
+
             <div class="col-md-5 col-sm-6">
               <h3>Reduce Your Use Tampa Bay</h3>
+
               <p>
                 Not everything can be recycled, so do more with less! Switch to reusable items and reduce your use of
                 single-use plastics. Reducing waste saves money and helps the environment. Be part of the solution to
@@ -413,24 +430,21 @@
               </p>
             </div>
           </div>
-          <!-- /.col -->
-
-          <!-- /.col -->
         </div>
-        <!-- /.row -->
       </div>
     </div>
     </div>
-    <!-- /.container -->
   </section>
 
   <!-- footer -->
   <footer class="content-block-nopad bg-deepocean footer-wrap-1-2">
     <div class="container footer-1-2">
       <img class="img-responsive center-block" src="/assets/images/brand/recycleLogo.png" alt="Recycle logo" />
+
       <p class="text-center">&copy; Tampa Bay Recycles,
         <script>document.write(/\d{4}/.exec(Date())[0])</script>
       </p>
+
       <p class="text-center">
         <a href="/es" class="text-danger">Español</a>
       </p>
