--- a/index.html
+++ b/index.html
@@ -176,8 +176,9 @@
           <div class="row">
             <div class="col-md-5 col-md-offset-1 col-sm-6">
               <div class="embed-responsive embed-responsive-16by9">
-                <iframe class="embed-responsive-item" src="https://youtu.be/LXsFph2swsU?si=ydL-owXxpHNigfRr"
-                  frameborder="0" title="The Recycle Life-Cycle video"
+                <iframe class="embed-responsive-item"
+                  src="https://www.youtube.com/embed/LXsFph2swsU?si=4FMVw16gwPmGVvWw" frameborder="0"
+                  title="The Recycle Life-Cycle video"
                   allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                   allowfullscreen></iframe>
               </div>
