--- a/index.html
+++ b/index.html
@@ -284,7 +284,8 @@
           <div class="row">
             <div class="col-md-5 col-md-offset-1 col-sm-6">
               <a href="/assets/images/BLANK_SW_HC Battery_Blowup2024Eng-Span-FINAL_03_1.png" target="_blank"><img
-                  class="img-responsive" src="/assets/images/BLANK_SW_HC Battery_Blowup2024Eng-Span-FINAL_03_1.png"
+                  class="img-responsive" style="margin-bottom: 1rem;"
+                  src="/assets/images/BLANK_SW_HC Battery_Blowup2024Eng-Span-FINAL_03_1.png"
                   alt="Battery recycling safety graphic" /></a>
 
               <a href="/assets/images/BLANK_SW_HC Battery_Blowup2024Eng-Span-FINAL_01_1.png" target="_blank"><img
